Improve to support java8